# sigm

./: .gitignore  README.md  pyproject.toml
src/: calc.py  file_io.py  setup.py
