[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [
  {email = "rudovichkirill@gmail.com", name = "rudovich"}
]
dependencies = [
  "autoflake (>=2.3.1,<3.0.0)",
  "black (>=25.1.0,<26.0.0)",
  "isort (>=6.0.1,<7.0.0)",
  "matplotlib (>=3.10.5,<4.0.0)",
  "numpy (>=2.3.2,<3.0.0)",
  "openpyxl (>=3.1.5,<4.0.0)",
  "pandas (>=2.3.2,<3.0.0)",
  "scipy (>=1.16.1,<2.0.0)",
  "sympy (>=1.14.0,<2.0.0)",
  "toml-sort (>=0.24.2,<0.25.0)",
  "tqdm (>=4.67.1,<5.0.0)"
]
description = ""
name = "sigm"
readme = "README.md"
requires-python = ">=3.13,<4.0"
version = "0.1.0"
